# pradham

./: .env  Cargo.toml  README.md  fake_data.db  fake_data.sqlite
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  served_requests_count.rs  users.rs
fake_data/: users.json
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240403_075054_served_requests.rs
pradham/: Cargo.toml
pradham/assets/css/: common.css
pradham/src/: database.rs  main.rs  models.rs  route_handlers.rs
pradham/src/route_handlers/: pages_handlers.rs  users_handlers.rs
pradham/static/: guide.html  index.html
pradham/static/css/: common.css
pradham/templates/: guide.html  index.html
src/: database.rs  main.rs  models.rs  route_handlers.rs
src/route_handlers/: users_handlers.rs
