[package]
name = "pradham"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }