[package]
name = "pradham"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
dotenvy = "0.15.7"
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
env_logger = "0.11.3"
log = "0.4.21"
serde_json = "1.0"
entity = { path = "../entity" }
migration = { path = "../migration" }